[package]
name = "beatStorageApp"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
crossterm = "0.27"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
strum = "0.26"
strum_macros = "0.26"
open = "5.3.2"